list-base: Move begin-loading code upclass and chain-up

Resolve 2 TODOs. Also remove outdated comment (update_context_menu()
doesn't activate the view.sort action at all.

Preferences signal connections are moved upclass too, because
their handler is update_sort_order_from_metadata_and_preferences().

This helps with preparing to move more things upclass, as per the
plan from  https://gitlab.gnome.org/GNOME/nautilus/-/issues/3042